# talent_engine

./: README.md
client/: README.md  package-lock.json  package.json  test.md  vite.config.ts
client/src/assets/: main.css
client/src/views/: HomeView.vue  HomeView_copy.vue
data/: data.sql
data/knowledge_base/chroma_persistent/: chroma.sqlite3
server/: .gitignore  gener_log_error.jsonl  log_error.jsonl  main.py  pyproject.toml  requirements.txt  test.py  test.txt  test2.py
server/configs/: __init__.py  config.yaml  configuration.py  configuration_wizard.py
server/core/chain/: base.py  indexing.py  sqlchat.py
server/core/embedder/: local_embedding.py  utils.py
server/core/indexing/loader/: __init__.py  doc_loader.py  pdf_loader.py  sqldata_loader.py  utils.py
server/core/indexing/splitter/: __init__.py  chinese_recursive_text_splitter.py  chinese_text_splitter.py
server/core/knowledge_base/: utils.py
server/core/llm/: utils.py
server/core/retriever/: reranker.py  utils.py
server/core/text2sql/: base.py  utils.py
server/core/vectorstore/: __init__.py  base.py  chroma.py  utils.py
server/database/: base.py  schema.py  session.py  utils.py
server/database/connector/: client.py
server/prompts/: __init__.py  data_augmentation_prompts.py  sql_sceen_prompts.py  utils.py
server/scripts/: piplin_test.py  real_scene_answer_construction.py  sample_construction.py
server/server/: api.py  chat.py  knowledge.py  messages.py  utils.py
server/tests/: merage_sqldata.py
server/utils/: thread.py
(+1 files in other folders)
